--- a/t36.md
+++ b/t36.md
@@ -31,12 +31,12 @@
 
 The tape stores data in human-readable form.
 
-|Type of tape|Description     |Note                                 |Example content|
-|------------|----------------|-------------------------------------|---------------|
-|data tape   |for input data  |not empty, created by the user       |D36_1_123_5643 |
-|program tape|for user program|not empty, created by the user       |P36_1##_4#     |
-|stack tape  |for stack       |created or overwritten by the program|S36_23_54_12   |
-|result tape |for output data |created or overwritten by the program|R36_123_511_1  |
+|Type of tape|Description     |Note                                 |Example content |
+|------------|----------------|-------------------------------------|----------------|
+|data tape   |for input data  |not empty, created by the user       |`D36_1_123_5643`|
+|program tape|for user program|not empty, created by the user       |`P36_1##_4#`    |
+|stack tape  |for stack       |created or overwritten by the program|`S36_23_54_12`  |
+|result tape |for output data |created or overwritten by the program|`R36_123_511_1` |
 
 
 ## Example programs
